deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-deployment
  labels:
    app: quotes 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quotes
  template:
    metadata:
      labels:
        app: quotes 
    spec:
      containers:
        - name: quotes 
          image: pabpereza/quotes
          ports:
            - containerPort: 80
          livenessProbe:
              httpGet:
                  path: /probes/health
                  port: 80
              initialDelaySeconds: 10
              periodSeconds: 10
              failureThreshold: 3
          readinessProbe:
              httpGet:
                  path: /probes/ready
                  port: 80
              initialDelaySeconds: 5
              periodSeconds: 5
              failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-service
spec:
  selector:
    app: quotes 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
