deploy/kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-deployment
  labels:
    app: quotes 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quotes
  template:
    metadata:
      labels:
        app: quotes 
    spec:
      containers:
        - name: quotes 
          image: pabpereza/quotes
          ports:
            - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-service
spec:
  selector:
    app: quotes 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
